--- a/CMDb/Base.lproj/Main.storyboard
+++ b/CMDb/Base.lproj/Main.storyboard
@@ -1,24 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="V25-zQ-F1R">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="HSu-7K-ya3">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="V25-zQ-F1R" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="39j-PK-vSJ">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JKH-93-WwZ" kind="relationship" relationship="rootViewController" id="y7M-Re-Omv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dfl-rc-myZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-210" y="169"/>
+        </scene>
+        <!--CMDb-->
+        <scene sceneID="xfK-HC-z6V">
+            <objects>
+                <tableViewController id="JKH-93-WwZ" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bD8-S7-vhq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="Etz-rf-dSg">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="378"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3e2-lI-cjo">
+                                    <rect key="frame" x="67.5" y="50" width="185" height="278"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="du0-us-tel">
+                                            <rect key="frame" x="133" y="226" width="44" height="44"/>
+                                            <state key="normal" image="play"/>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="185" id="161-wn-1DG"/>
+                                        <constraint firstAttribute="bottom" secondItem="du0-us-tel" secondAttribute="bottom" constant="8" id="2CI-Tm-pms"/>
+                                        <constraint firstAttribute="height" constant="278" id="4aa-xg-w6s"/>
+                                        <constraint firstAttribute="trailing" secondItem="du0-us-tel" secondAttribute="trailing" constant="8" id="75Z-u3-Ke0"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="3e2-lI-cjo" firstAttribute="top" secondItem="Etz-rf-dSg" secondAttribute="top" constant="50" id="OBX-SK-ugA"/>
+                                <constraint firstItem="3e2-lI-cjo" firstAttribute="centerX" secondItem="Etz-rf-dSg" secondAttribute="centerX" id="S88-vD-fOJ"/>
+                                <constraint firstAttribute="bottom" secondItem="3e2-lI-cjo" secondAttribute="bottom" constant="50" id="k2J-Ze-IQW"/>
+                            </constraints>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="227" id="Rcl-vn-JI3">
+                                <rect key="frame" x="0.0" y="406" width="320" height="227"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Rcl-vn-JI3" id="ghf-j1-UHb">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="226.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="33G-L7-4gm">
+                                            <rect key="frame" x="15" y="8" width="290" height="30.5"/>
+                                            <state key="normal" title="Section &gt;">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                        </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mW9-ws-V2M">
+                                            <rect key="frame" x="0.0" y="46.5" width="320" height="180"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="mW9-ws-V2M" secondAttribute="height" multiplier="16:9" id="T5T-1m-HCP"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="mW9-ws-V2M" secondAttribute="bottom" id="1ll-PI-lRk"/>
+                                        <constraint firstItem="mW9-ws-V2M" firstAttribute="top" secondItem="33G-L7-4gm" secondAttribute="bottom" constant="8" symbolic="YES" id="2Dk-tV-SQM"/>
+                                        <constraint firstItem="33G-L7-4gm" firstAttribute="leading" secondItem="ghf-j1-UHb" secondAttribute="leading" constant="15" id="6GY-XJ-yWg"/>
+                                        <constraint firstItem="33G-L7-4gm" firstAttribute="top" secondItem="ghf-j1-UHb" secondAttribute="top" constant="8" id="EoE-qM-dy0"/>
+                                        <constraint firstAttribute="trailing" secondItem="33G-L7-4gm" secondAttribute="trailing" constant="15" id="Ev9-uf-cYD"/>
+                                        <constraint firstItem="mW9-ws-V2M" firstAttribute="leading" secondItem="ghf-j1-UHb" secondAttribute="leading" id="J5q-iB-P4o"/>
+                                        <constraint firstAttribute="trailing" secondItem="mW9-ws-V2M" secondAttribute="trailing" id="TTA-8s-NKs"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="JKH-93-WwZ" id="WzH-4I-m85"/>
+                            <outlet property="delegate" destination="JKH-93-WwZ" id="uzh-XX-k6w"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="CMDb" id="0sb-EG-6nf"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nh1-KT-KPr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="532.5" y="167.95774647887325"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="play" width="44" height="44"/>
+    </resources>
 </document>
