--- a/CMDb/Base.lproj/Main.storyboard
+++ b/CMDb/Base.lproj/Main.storyboard
@@ -202,6 +202,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EZZ-PO-bLD">
+                                <rect key="frame" x="0.0" y="32" width="320" height="568"/>
+                            </imageView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yhg-NX-RRF">
+                                <rect key="frame" x="0.0" y="32" width="320" height="568"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="JBi-lr-cZJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LEj-BB-7sc">
                                 <rect key="frame" x="0.0" y="64" width="320" height="180"/>
                                 <subviews>
@@ -222,13 +233,22 @@
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="LEj-BB-7sc" firstAttribute="top" secondItem="IJg-Q9-8yI" secondAttribute="top" id="2fu-ht-WTe"/>
+                            <constraint firstItem="yhg-NX-RRF" firstAttribute="height" secondItem="EZZ-PO-bLD" secondAttribute="height" id="86u-w7-UK0"/>
+                            <constraint firstItem="EZZ-PO-bLD" firstAttribute="centerX" secondItem="IJg-Q9-8yI" secondAttribute="centerX" id="8XK-yE-Lxs"/>
+                            <constraint firstItem="EZZ-PO-bLD" firstAttribute="width" secondItem="tri-VC-dMV" secondAttribute="width" id="8ch-Rn-b9s"/>
+                            <constraint firstItem="yhg-NX-RRF" firstAttribute="width" secondItem="EZZ-PO-bLD" secondAttribute="width" id="Ght-6N-1pd"/>
+                            <constraint firstItem="EZZ-PO-bLD" firstAttribute="height" secondItem="tri-VC-dMV" secondAttribute="height" id="Lpb-xb-ukO"/>
                             <constraint firstItem="LEj-BB-7sc" firstAttribute="leading" secondItem="IJg-Q9-8yI" secondAttribute="leading" id="RnV-rC-4jd"/>
                             <constraint firstItem="IJg-Q9-8yI" firstAttribute="trailing" secondItem="LEj-BB-7sc" secondAttribute="trailing" id="ZjC-0Q-lal"/>
+                            <constraint firstItem="yhg-NX-RRF" firstAttribute="centerX" secondItem="EZZ-PO-bLD" secondAttribute="centerX" id="dv5-EY-EPP"/>
+                            <constraint firstItem="yhg-NX-RRF" firstAttribute="centerY" secondItem="EZZ-PO-bLD" secondAttribute="centerY" id="eNI-YH-vxF"/>
+                            <constraint firstItem="EZZ-PO-bLD" firstAttribute="centerY" secondItem="IJg-Q9-8yI" secondAttribute="centerY" id="yXt-Fx-wNb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IJg-Q9-8yI"/>
                     </view>
                     <navigationItem key="navigationItem" title="Movie Details" id="cgY-20-ZK4"/>
                     <connections>
+                        <outlet property="bgImageView" destination="EZZ-PO-bLD" id="oR8-o7-DlG"/>
                         <outlet property="imageView" destination="Ret-X9-GPF" id="p63-Ff-OQd"/>
                     </connections>
                 </viewController>
